--- a/code.html
+++ b/code.html
@@ -23,7 +23,7 @@
 
         <div class="row">
             <div class="col-12">
-                <button class="btn btn-primary newUser" data-bs-toggle="modal" data-bs-target="#userForm">New User <i class="bi bi-people"></i></button>
+                <button class="btn btn-primary newUser" data-bs-toggle="modal" data-bs-target="#userForm">New Appointment <i class="bi bi-people"></i></button>
             </div>
         </div>
 
