--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p>The hard days are the best because that’s when champions are made, so if you push through, you can push through anything.<br>
                 </p>
                 <a href = "code.html">
-                <button class="btn">Get Started</button>
+                <button class="btn">Appointment</button>
                 </a>
             </div>
             <div class="home-image">
